// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots align 1`] = `
.c1 {
  padding: 0.5em 1em;
  color: rgba(180,180,180,1);
  font-size: 12px;
  font-weight: 700;
  text-align: inherit;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 {
  width: 100%;
  border-spacing: 0;
  line-height: 1.4;
}

.c0 th {
  border-top: 1px rgba(229,229,229,1) solid;
  border-bottom: 1px rgba(229,229,229,1) solid;
}

.c0 tbody td {
  padding: 1em;
  vertical-align: top;
}

.c0 tbody td:first-of-type {
  border-left: 4px solid transparent;
}

.c2:nth-child(even) {
  background: #f9f9f9;
}

<Table
  alternate={true}
  columns={
    Array [
      Object {
        "key": "id",
        "label": "hmnn",
      },
      Object {
        "align": "left",
        "key": "propL",
        "label": "hmnn",
      },
      Object {
        "align": "center",
        "key": "propC",
        "label": "Blah",
      },
      Object {
        "align": "right",
        "key": "propR",
        "label": "hmnn",
      },
      Object {
        "align": "justify",
        "key": "propJ",
        "label": "Blah",
      },
    ]
  }
  data={
    Array [
      Object {
        "id": "123s",
        "propC": "center",
        "propJ": "justify",
        "propL": "left",
        "propR": "right",
      },
      Object {
        "id": "123e",
        "propC": "center",
        "propJ": "justify",
        "propL": "left",
        "propR": "right",
      },
      Object {
        "id": "123w",
        "propC": "center",
        "propJ": "justify",
        "propL": "left",
        "propR": "right",
      },
    ]
  }
  hoverable={false}
  onRowClick={[Function]}
  uniqueKey="id"
>
  <styled.table
    onRowClick={[Function]}
  >
    <table
      className="c0"
    >
      <thead>
        <tr>
          <th
            align="left"
            key="llm-table-th-id"
          >
            <styled.div
              onClick={null}
              sorted="default"
            >
              <div
                className="c1"
                onClick={null}
              >
                hmnn
              </div>
            </styled.div>
          </th>
          <th
            align="left"
            key="llm-table-th-propL"
          >
            <styled.div
              onClick={null}
              sorted="default"
            >
              <div
                className="c1"
                onClick={null}
              >
                hmnn
              </div>
            </styled.div>
          </th>
          <th
            align="center"
            key="llm-table-th-propC"
          >
            <styled.div
              onClick={null}
              sorted="default"
            >
              <div
                className="c1"
                onClick={null}
              >
                Blah
              </div>
            </styled.div>
          </th>
          <th
            align="right"
            key="llm-table-th-propR"
          >
            <styled.div
              onClick={null}
              sorted="default"
            >
              <div
                className="c1"
                onClick={null}
              >
                hmnn
              </div>
            </styled.div>
          </th>
          <th
            align="justify"
            key="llm-table-th-propJ"
          >
            <styled.div
              onClick={null}
              sorted="default"
            >
              <div
                className="c1"
                onClick={null}
              >
                Blah
              </div>
            </styled.div>
          </th>
        </tr>
      </thead>
      <tbody>
        <styled.tr
          alternate={true}
          hoverable={false}
          key="123s"
          onClick={[Function]}
        >
          <tr
            className="c2"
            onClick={[Function]}
          >
            <td
              align="left"
              key="llm-table-td-id"
            >
              123s
            </td>
            <td
              align="left"
              key="llm-table-td-propL"
            >
              left
            </td>
            <td
              align="center"
              key="llm-table-td-propC"
            >
              center
            </td>
            <td
              align="right"
              key="llm-table-td-propR"
            >
              right
            </td>
            <td
              align="justify"
              key="llm-table-td-propJ"
            >
              justify
            </td>
          </tr>
        </styled.tr>
        <styled.tr
          alternate={true}
          hoverable={false}
          key="123e"
          onClick={[Function]}
        >
          <tr
            className="c2"
            onClick={[Function]}
          >
            <td
              align="left"
              key="llm-table-td-id"
            >
              123e
            </td>
            <td
              align="left"
              key="llm-table-td-propL"
            >
              left
            </td>
            <td
              align="center"
              key="llm-table-td-propC"
            >
              center
            </td>
            <td
              align="right"
              key="llm-table-td-propR"
            >
              right
            </td>
            <td
              align="justify"
              key="llm-table-td-propJ"
            >
              justify
            </td>
          </tr>
        </styled.tr>
        <styled.tr
          alternate={true}
          hoverable={false}
          key="123w"
          onClick={[Function]}
        >
          <tr
            className="c2"
            onClick={[Function]}
          >
            <td
              align="left"
              key="llm-table-td-id"
            >
              123w
            </td>
            <td
              align="left"
              key="llm-table-td-propL"
            >
              left
            </td>
            <td
              align="center"
              key="llm-table-td-propC"
            >
              center
            </td>
            <td
              align="right"
              key="llm-table-td-propR"
            >
              right
            </td>
            <td
              align="justify"
              key="llm-table-td-propJ"
            >
              justify
            </td>
          </tr>
        </styled.tr>
      </tbody>
    </table>
  </styled.table>
</Table>
`;

exports[`snapshots basic 1`] = `
.c1 {
  padding: 0.5em 1em;
  color: rgba(180,180,180,1);
  font-size: 12px;
  font-weight: 700;
  text-align: inherit;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 {
  width: 100%;
  border-spacing: 0;
  line-height: 1.4;
}

.c0 th {
  border-top: 1px rgba(229,229,229,1) solid;
  border-bottom: 1px rgba(229,229,229,1) solid;
}

.c0 tbody td {
  padding: 1em;
  vertical-align: top;
}

.c0 tbody td:first-of-type {
  border-left: 4px solid transparent;
}

.c2:nth-child(even) {
  background: #f9f9f9;
}

<Table
  alternate={true}
  columns={
    Array [
      Object {
        "key": "name",
        "label": "Name",
      },
      Object {
        "key": "job",
        "label": "Occupation",
      },
      Object {
        "key": "hobbies",
        "label": "Fun",
      },
    ]
  }
  data={
    Array [
      Object {
        "hobbies": "basketball",
        "id": 123,
        "job": "CEO",
        "name": "Chan",
      },
      Object {
        "hobbies": "hockey",
        "id": 312,
        "job": "Hobo",
        "name": "Chow",
      },
      Object {
        "hobbies": "football",
        "id": 352,
        "job": "Carpenter",
        "name": "Mannings",
      },
      Object {
        "hobbies": "buy",
        "id": 24523,
        "job": "Business man",
        "name": "Wong",
      },
      Object {
        "hobbies": "eat",
        "id": 47657,
        "job": "Janitor",
        "name": "Smith",
      },
      Object {
        "hobbies": "sit",
        "id": 5675,
        "job": "PUTUS",
        "name": "Trump",
      },
    ]
  }
  hoverable={false}
  onRowClick={[Function]}
  uniqueKey="id"
>
  <styled.table
    onRowClick={[Function]}
  >
    <table
      className="c0"
    >
      <thead>
        <tr>
          <th
            align="left"
            key="llm-table-th-name"
          >
            <styled.div
              onClick={null}
              sorted="default"
            >
              <div
                className="c1"
                onClick={null}
              >
                Name
              </div>
            </styled.div>
          </th>
          <th
            align="left"
            key="llm-table-th-job"
          >
            <styled.div
              onClick={null}
              sorted="default"
            >
              <div
                className="c1"
                onClick={null}
              >
                Occupation
              </div>
            </styled.div>
          </th>
          <th
            align="left"
            key="llm-table-th-hobbies"
          >
            <styled.div
              onClick={null}
              sorted="default"
            >
              <div
                className="c1"
                onClick={null}
              >
                Fun
              </div>
            </styled.div>
          </th>
        </tr>
      </thead>
      <tbody>
        <styled.tr
          alternate={true}
          hoverable={false}
          key="123"
          onClick={[Function]}
        >
          <tr
            className="c2"
            onClick={[Function]}
          >
            <td
              align="left"
              key="llm-table-td-name"
            >
              Chan
            </td>
            <td
              align="left"
              key="llm-table-td-job"
            >
              CEO
            </td>
            <td
              align="left"
              key="llm-table-td-hobbies"
            >
              basketball
            </td>
          </tr>
        </styled.tr>
        <styled.tr
          alternate={true}
          hoverable={false}
          key="312"
          onClick={[Function]}
        >
          <tr
            className="c2"
            onClick={[Function]}
          >
            <td
              align="left"
              key="llm-table-td-name"
            >
              Chow
            </td>
            <td
              align="left"
              key="llm-table-td-job"
            >
              Hobo
            </td>
            <td
              align="left"
              key="llm-table-td-hobbies"
            >
              hockey
            </td>
          </tr>
        </styled.tr>
        <styled.tr
          alternate={true}
          hoverable={false}
          key="352"
          onClick={[Function]}
        >
          <tr
            className="c2"
            onClick={[Function]}
          >
            <td
              align="left"
              key="llm-table-td-name"
            >
              Mannings
            </td>
            <td
              align="left"
              key="llm-table-td-job"
            >
              Carpenter
            </td>
            <td
              align="left"
              key="llm-table-td-hobbies"
            >
              football
            </td>
          </tr>
        </styled.tr>
        <styled.tr
          alternate={true}
          hoverable={false}
          key="24523"
          onClick={[Function]}
        >
          <tr
            className="c2"
            onClick={[Function]}
          >
            <td
              align="left"
              key="llm-table-td-name"
            >
              Wong
            </td>
            <td
              align="left"
              key="llm-table-td-job"
            >
              Business man
            </td>
            <td
              align="left"
              key="llm-table-td-hobbies"
            >
              buy
            </td>
          </tr>
        </styled.tr>
        <styled.tr
          alternate={true}
          hoverable={false}
          key="47657"
          onClick={[Function]}
        >
          <tr
            className="c2"
            onClick={[Function]}
          >
            <td
              align="left"
              key="llm-table-td-name"
            >
              Smith
            </td>
            <td
              align="left"
              key="llm-table-td-job"
            >
              Janitor
            </td>
            <td
              align="left"
              key="llm-table-td-hobbies"
            >
              eat
            </td>
          </tr>
        </styled.tr>
        <styled.tr
          alternate={true}
          hoverable={false}
          key="5675"
          onClick={[Function]}
        >
          <tr
            className="c2"
            onClick={[Function]}
          >
            <td
              align="left"
              key="llm-table-td-name"
            >
              Trump
            </td>
            <td
              align="left"
              key="llm-table-td-job"
            >
              PUTUS
            </td>
            <td
              align="left"
              key="llm-table-td-hobbies"
            >
              sit
            </td>
          </tr>
        </styled.tr>
      </tbody>
    </table>
  </styled.table>
</Table>
`;
